@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b981c7bdc97f64c195e41aae25476fcfd7cb35bb ChangeLog
+SHA1 d7b1a32df33204d3a02d138be3901258ed1da71c ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 346a691b7808c1567336108a792d760d2db0de82 META.yml
-SHA1 4064d1021c3ec8e50b1188b15e7b318945197939 Makefile.PL
+SHA1 d8a7c4ef5704996ebfd7b7742c8c80942d69597d META.yml
+SHA1 1e2d2f77774d58735f5f33c3e7789f84a73585f4 Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 a0326d2d338e383b0263f2d5dcb9d0d97f37aa78 lib/Net/FullAuto.pm
+SHA1 f42563447c8aaa97058c4f89402aa815ca354fda lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTpX1cAAoJEBa/9Pad787Exm8H+wbTohrrE8tpW8L4efp6IoUS
-jLKFpgMsaeaVt6Q9L95rtEjS5uDtvvgIwQp3G5o1SDqBUINZWPztH7HbyXZuCe1v
-KxXBEkJau8WfdZABfrkciNDRqxxcvDWcWj6gy1Nn6IRTF9wRC0nBqdWM0vLuwlEG
-d47eVf75zv88PH2dcU7WQJl+Ua4YEgbL8UW/uREpYkOEhQ2h3B9pk6zv9nXbFT+j
-V0hEvDLf3irQbnIrk9g7Hs4VRFR5dxNGl2znD3G8TuMABfEfN9M/5VE7tDPH3rN6
-mKSPAmETR9eBbNZlR5XzbU7W3/m1Yy6KdlnVLK7bzC6O+c2xO1QnRTsw1e3ak7M=
-=3tfV
+iQEcBAEBAgAGBQJTpZvlAAoJEBa/9Pad787E4aYIAJ1gmtRdmPYsz689CymQ/Pcr
+8pAFWQObsLloXCC7mGseEZ/3VVKTksWfsWLT7gNlOCpuipNge6wOZJneK4ZzPZsR
+wgp0wDRCIrukg4BAypBuxYhPrU7a8JrMTceynOO0eynmXFyIIMy7MnV8/ZuNjjk9
+fuOfBVEA8grugw2Qpy1jqIbgAfkDrI7hY3uS+FIl6iQEjJEg/Q5xu2Sm5BTwEqD5
+8AJVPYKHNg43HvvQe7uhKkH9Ld+XDxJiZc0oC7MiWOz00kKKS0y/AVQTihEA8/UC
+oNPKzzs8Hj8Inl6l0rtntcLbw/MOoKvrinyjE+cOINnb1f03/c1UD4LvgHHD0CU=
+=3Hry
 -----END PGP SIGNATURE-----
