@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999996';
+our $VERSION='0.99999997';
 
 
 use 5.005;
